# character-recognition

./: .gitignore  CMakeLists.txt  get_and_build_opencv.sh  install_dependencies.sh
src/: main.cpp
